# ale-wrapper

./: CMakeLists.txt  README.md  params-kelly.json  params.json
scripts/: codegen_experiment.sh  experiments.sh  filter_tpg_dot.py
src/: ALEWrapper.cpp  ALEWrapper.h  frostbiteStandalone.cpp  instructions.cpp  instructions.h  learningExample.cpp  replay.cpp  replay.h
src/codegen/: codegen.cpp  inferenceCodegen.cpp  inferenceTPG.cpp
